# rust-learn

./: Cargo.toml
.github/workflows/: ci.yaml
adder/src/: lib.rs
client_examples/: Cargo.toml
client_examples/src/: main.rs
hello_macro_derive/src/: lib.rs
lib/rgrep/src/: lib.rs  main.rs
lib/rgrep/tests/: lib_config_test.rs  lib_search_test.rs
logger/: Cargo.toml
logger/src/: lib.rs  main.rs  spinners.rs
logger/tests/: spinners_dots_test.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/www/: index.html
server/www/errors/: 404.html
src/: advanced_traits.rs  advanced_types.rs  all_the_places_for_patterns.rs  art.rs  boxes.rs  closures.rs  data_types.rs  defining_enum.rs  defining_modules.rs  drops.rs  errors_with_panic.rs  errors_with_result.rs  example_collections.rs  example_struct.rs  flow_control.rs  functions.rs  generics_example.rs  guess_the_number.rs  hash_maps.rs  interior_mutability.rs  iterators.rs  lib.rs  lifetime_syntax.rs  logger.rs  main.rs  match_flow_control.rs  message_passing.rs  mutate.rs  oo_design_patterns.rs  ownership.rs  panic_or_not_panic.rs  reference_counting.rs  reference_cycles.rs  references_and_borrowing.rs  refutability.rs  shared_state.rs  slices.rs  strings.rs  tests.rs  threads_spawn.rs  (+5 more)
tests/: common.rs  mapped_cache_test.rs  tests_test.rs
