[package]
name = "rust_learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "adder",
    "logger",
]

[dependencies]
rand = "0.4.0"
chrono = "0.4"
adder = { path = "./adder" }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
