[package]
name = "rust_learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "adder",
    "logger",
    "hello_macro",
    "hello_macro_derive",
]

[dependencies]
rand = "0.4.0"
chrono = "0.4"
adder = { path = "./adder" }
logger = { path = "./logger" }
hello_macro = { path = "./hello_macro" }
hello_macro_derive = { path = "./hello_macro_derive" }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
